--- a/composer.json
+++ b/composer.json
@@ -39,15 +39,15 @@
     },
     "require": {
         "php": "^5.6|^7.0",
-        "illuminate/database": "~5.1.20|~5.2|~5.3|~5.4|~5.5",
-        "illuminate/support": "~5.1.20|~5.2|~5.3|~5.4|~5.5"
+        "illuminate/database": "~5.1.20|~5.2|~5.3|~5.4|~5.5|^6.0",
+        "illuminate/support": "~5.1.20|~5.2|~5.3|~5.4|~5.5|^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.11",
         "mockery/mockery": "^0.9.8",
         "orchestra/database": "~3.4.0|~3.5.0",
         "orchestra/testbench": "~3.4.0|~3.5.0",
-        "phpunit/phpunit": "^5.7|^6.0"
+        "phpunit/phpunit": "^5.7|^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
