Update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cybercog/laravel-likeable",
+    "name": "itbm/laravel-likeable",
     "description": "Make Laravel Eloquent models Likeable & Dislikeable in a minutes!",
     "type": "library",
     "license": "MIT",
